--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Python
 app/__pycache__/
+app/crud/__pycache__/
+app/models/__pycache__/
+app/routers/__pycache__/
+app/schemas/__pycache__/
 *.pyc
 
 # Environment
